[project]
name = "ai-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.8",
    "openai>=2.17.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
